# Versionify

./: .gitignore  Cargo.toml  LICENSE  Readme.md  _.env  default.nix  shell.nix
src/: main.rs
