[package]
name = "versionify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11.5", features = [ "env-file" ] }
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
env_logger = "0.9.0"
serde_json = "1.0.82"
git2 = "0.14.4"
