[package]
name = "versionify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12.0", features = [ "env-file" ] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.1"
serde_json = "1.0.113"
git2 = "0.18.2"
